Added app.js and tic-tac-toe.css files. Updated index with TTT details.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Javascript Racer</title>
+    <title>Javascript Tic-Tac-Toe</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/racer.css">
+    <link rel="stylesheet" type="text/css" href="css/tic-tac-toe.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script type="text/javascript" src="player.js"></script>
-    <script type="text/javascript" src="racergame.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
     <div id="game-board">
