Added text and heading.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
+
+  <body>
+    <p><h1>Javascript Tic-Tac-Toe</h1></p>
+    <p>For two players. Players will take turns until game is complete. Player 1 goes first and is X, Player 2 is O. Hit any key to start.</p>
     <div id="game-board">
     </div>
-  <body>
-
 
   </body>
   </html>
