changed ttt game to ttt game model.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/tic-tac-toe.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script type="text/javascript" src="tic-tac-toe-game.js"></script>
+    <script type="text/javascript" src="tic-tac-toe-game-model.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
 
