--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/tic-tac-toe.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/views/tic-tac-toe-board-view.js"></script>
+    <script type="text/javascript" src="js/views/tic-tac-toe-game-view.js"></script>
     <script type="text/javascript" src="js/models/tic-tac-toe-game-model.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </head>
